--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,20 @@ pool:
   - agent.name -equals DESKTOP-6IQ0FI4
   - npm
 
+# ASP.NET Core
+# Build and test ASP.NET Core projects targeting .NET Core.
+# Add steps that run tests, create a NuGet package, deploy, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
+
+trigger:
+- '*'
+
+pool: 
+  name: Default
+  demands:
+  - agent.name -equals DESKTOP-6IQ0FI4
+  - npm
+
 variables:
   buildConfiguration: 'Release'
 
